# internal/http/router/router.go
@@ -322,6 +322,9 @@ func (rt *Router) Setup() http.Handler {
 				r.Put("/{id}", rt.activityHandler.Update)
 				r.Delete("/{id}", rt.activityHandler.Delete)
 				r.Post("/{id}/complete", rt.activityHandler.Complete)
+				r.Post("/{id}/follow-up", rt.activityHandler.CreateFollowUp)
+				r.Post("/{id}/attendees", rt.activityHandler.AddAttendee)
+				r.Delete("/{id}/attendees/{userId}", rt.activityHandler.RemoveAttendee)
 			})
 		})
 	})
